# XDPD-Capability-Acquisition-Engine

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  README.md  RESEARCH.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: Cargo.toml  README.md
examples/data/: sp500_sample.csv
examples/gateway/: Cargo.toml  README.md
examples/gateway/src/: main.rs
examples/src/: main.rs
xdpd/: ARCHITECTURE.md  Cargo.toml  README.md
xdpd/src/: lib.rs
